# cocoindex-code

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
benchmarks/search_quality/: example_queries.yml
docker/: Dockerfile
skills/ccc/references/: settings.md
src/cocoindex_code/: __init__.py  cli.py  client.py  config.py  daemon.py  daemon_entry.py  embedder_defaults.py  embedder_params.py  indexer.py  litellm_embedder.py  project.py  protocol.py  query.py  schema.py  search_quality.py  server.py  settings.py  shared.py
tests/: conftest.py  test_backward_compat.py  test_chunker_registry.py  test_cli_helpers.py  test_client.py  test_config.py  test_daemon.py  test_e2e.py  test_e2e_daemon.py  test_e2e_mcp.py  test_embed_params_forwarding.py  test_embedder_defaults.py  test_embedder_params.py  test_file_matcher.py  test_litellm_embedder.py  test_packaging.py  test_protocol.py  test_query_filters.py  test_search_quality.py  test_settings.py  test_shared.py
